[tool.poetry]
name = "lawnsim"
version = "0.1.0"
description = ""
authors = ["mlamunion <mike.lamunion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
pydantic = "^1.10.7"
fastapi = "^0.95.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
